# bot-of-spades

./: .gitignore  README.md  pyproject.toml  requirements.txt
botofspades/: __main__.py  bot.py  constants.py  dice.py  jsonwrappers.py  log.py  outdefs.outlang  outmsg.py  slash.py  unicode.py
botofspades/extensions/: botcontrol.py  charsheets.py  intotheodd.py
botofspades/extensions/charsheets/: __init__.py  types.py
docs/source/: conf.py  getting_started.rst  index.rst
docs/source/modules/: bot_control.rst  charsheets.rst  index.rst  into_the_odd.rst
shutsubot/: __main__.py  constants.py  unicode.py
shutsubot/extensions/: dice.py  nightmare_generator.py
shutsubot/extensions/dice/: __main__.py
utils/: __init__.py  random.py
